force-app/main/default/objects/Quota_Manage__c/Quota_Manage__c.object-meta.xml
<CustomObject>
    <description>額度管理主檔(初始額度)</description>
    <label>Quota Manage</label>
    <nameField>
        <displayFormat>QT-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Manage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>