force-app/main/default/objects/Quota_Manage__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
TODAY() &gt; Valid_Date__c,
TODAY() &lt; Expiry_Date__c 
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>