force-app/main/default/objects/Quota_Manage__c/fields/Quota_Append__c.field-meta.xml
<CustomField>
    <fullName>Quota_Append__c</fullName>
    <description>額度(追加)</description>
    <inlineHelpText>額度(追加)</inlineHelpText>
    <label>Quota(Append)</label>
    <summarizedField>Quota_Manage_Detail__c.Quota_Append__c</summarizedField>
    <summaryForeignKey>Quota_Manage_Detail__c.Quota_Manage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>