force-app/main/default/objects/Quota_Manage__c/fields/Quota_Initial__c.field-meta.xml
<CustomField>
    <fullName>Quota_Initial__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quota(Initial)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>