force-app/main/default/objects/Quota_Manage__c/fields/Quota_Remain__c.field-meta.xml
<CustomField>
    <fullName>Quota_Remain__c</fullName>
    <description>額度(剩餘)</description>
    <formula>Quota_Total__c-Quota_Used__c-Quota_Transit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>額度(剩餘)</inlineHelpText>
    <label>Quota(Remain)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>