force-app/main/default/objects/Quota_Manage__c/fields/Quota_Total__c.field-meta.xml
<CustomField>
    <fullName>Quota_Total__c</fullName>
    <description>額度(總額度)</description>
    <formula>Quota_Initial__c+Quota_Append__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>額度(總額度)</inlineHelpText>
    <label>Quota(Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>