force-app/main/default/objects/Quota_Manage__c/fields/Quota_Transit__c.field-meta.xml
<CustomField>
    <fullName>Quota_Transit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>在途額度</description>
    <label>Quota(Transit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>