force-app/main/default/objects/Quota_Manage__c/fields/Quota_Used__c.field-meta.xml
<CustomField>
    <fullName>Quota_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quota(Used)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>