force-app/main/default/objects/Quota_Manage__c/fields/Type_For__c.field-meta.xml
<CustomField>
    <fullName>Type_For__c</fullName>
    <label>Type For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free &amp; Reduced Fare Tickets</fullName>
            </value>
            <value>
                <fullName>Bulk Tickets</fullName>
            </value>
            <value>
                <fullName>Barter Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>