force-app/main/default/objects/Quota_Manage__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <description>已使用完畢</description>
    <formula>Quota_Total__c &lt;= Quota_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>已使用完畢</inlineHelpText>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>