force-app/main/default/objects/Quota_Manage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Quota_Initial__c</columns>
    <columns>Quota_Remain__c</columns>
    <columns>Quota_Used__c</columns>
    <columns>Quota_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Remark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>